After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 745343 - AtkWindow signals are implemented in jawobject.c
AtkWindow signals are implemented in jawobject.c
Status: RESOLVED FIXED
Product: java-atk-wrapper
Classification: Applications
Component: general
unspecified
Other Linux
: Normal normal
: ---
Assigned To: java-atk-wrapper maintainer(s)
java-atk-wrapper maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2015-02-28 19:20 UTC by Magdalen Berns (irc magpie)
Modified: 2015-06-17 17:12 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Patch to address problem (22.31 KB, patch)
2015-06-06 12:31 UTC, Magdalen Berns (irc magpie)
committed Details | Review
Removed string.h include because it isn't needed (628 bytes, patch)
2015-06-06 16:43 UTC, Magdalen Berns (irc magpie)
committed Details | Review
Patch to address problem (11.75 KB, patch)
2015-06-10 19:06 UTC, Magdalen Berns (irc magpie)
committed Details | Review
HACKING update to reflect changes (1.17 KB, patch)
2015-06-17 17:12 UTC, Magdalen Berns (irc magpie)
committed Details | Review

Description Magdalen Berns (irc magpie) 2015-02-28 19:20:35 UTC
Since ATK 2.2, an interface called AtkWindow which defines the signals which are currently in jawobject was created in ATK. It would be good to create jawwindow.c and start on reimplementing signals in line with AtkWindow.

As mentioned on a11y-devel mailing list, there using the existing example of implemented in clutter which can be referenced, as a guide.[1,2]

[1] https://mail.gnome.org/archives/gnome-accessibility-devel/2014-November/msg00012.html
[2]
Comment 1 Magdalen Berns (irc magpie) 2015-06-06 12:31:43 UTC
Created attachment 304685 [details] [review]
Patch to address problem
Comment 2 Magdalen Berns (irc magpie) 2015-06-06 16:43:11 UTC
Created attachment 304701 [details] [review]
Removed string.h include because it isn't needed
Comment 3 Magdalen Berns (irc magpie) 2015-06-10 18:36:16 UTC
I am reopening because I would prefer to initalise the windows interface instead of accessing the signals via JawWindowClass.
Comment 4 Magdalen Berns (irc magpie) 2015-06-10 19:06:54 UTC
Created attachment 305009 [details] [review]
Patch to address problem
Comment 5 Magdalen Berns (irc magpie) 2015-06-17 17:12:44 UTC
Created attachment 305498 [details] [review]
HACKING update to reflect changes