JNI: Create JawWindow for AtkWindow signals

Bug: https://bugzilla.gnome.org/show_bug.cgi?id=745343