jni/src/jawimpl.c
@@ -23,6 +23,7 @@
 #include <glib.h>
 #include <glib-object.h>
 #include <glib/gprintf.h>
+#include "jawwindow.h"
 #include "jawutil.h"
 #include "jawimpl.h"
 #include "jawtoplevel.h"
